--- a/inc/content_home.html
+++ b/inc/content_home.html
@@ -2,3 +2,4 @@
 			<p>Welcome to my small space.</p>
 			<p>THIS IS A WORK IN PROGRESS!</p>
 			<p>I'm still learing hot to do this stuff!</p>
+			<p>If you would like to support me donations can be made <a href=https://streamelements.com/shadyram/tip> here</a></p>
